<resources>
    <string name="app_name">Firebase Authentication</string>
    <string name="status">Status:</string>
    <string name="create_user">Create User</string>
    <string name="email">Email</string>
    <string name="google_login">Google Login</string>
    <string name="normal_login">Normal Login</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
</resources>
