<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="css.cis3334.firebaseauthentication.MainActivity"
    android:orientation="vertical">


    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="1"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType=""
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:layout_weight="1"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="1"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType=""
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_weight="1"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:text="@string/normal_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:text="@string/create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCreateLogin"
            tools:ignore="ButtonStyle" />

        <Button
            android:text="@string/google_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGoogleLogin"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:text="@string/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStatus"
        android:layout_weight="1"
        android:textSize="30sp" />

    <Button
        android:text="@string/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignOut"
        android:layout_weight="1" />

</LinearLayout>
